fix: updated input dark mode styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,8 @@ textarea {
       -moz-appearance: textfield !important;
       appearance: textfield !important;
    }
+
+   outline: inherit;
 }
 
 input:-webkit-autofill::first-line {
@@ -80,8 +82,8 @@ input:-webkit-autofill::first-line {
 }
 
 input:-webkit-autofill {
-   -webkit-box-shadow: 0 0 0 30px white inset;
-   -webkit-text-fill-color: black;
+   -webkit-box-shadow: 0 0 0 30px transparent inset;
+   -webkit-text-fill-color: var(--background-paper);
    transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -102,7 +104,7 @@ input:autofill + label {
 }
 
 input {
-   caret-color: black;
+   caret-color: var(--primary-default);
 }
 
 ::-webkit-scrollbar {
